objects/Contact_Portal_Tab_Access__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>FV2 : This custom setting will store the Level-1 tabs grouping corresponding to each Department (Contact custom field).</description>
    <fields>
        <fullName>Account_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BOM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BOM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Backlog__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Backlog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certificate_of_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certificate of Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_request_report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>My Device Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Configurator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Configurator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Construction_Analysis_report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Issue Tracker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_and_Debit_Note__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit and Debit Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Mfg_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Mfg Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Order_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Order Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Shipment_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Shipment Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cycle_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cycle Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Enablement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Design Enablement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Specification_Packages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Design Specification Packages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Technology_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Design &amp; Technology Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ET_and_Inline_CPK_report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ET and Inline CPK report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electrical Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engineering_Lot_status_report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engineering Lot status report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engineering_WIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engineering WIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Export_Control__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fab_Out_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fab Out Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fab_WIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fab WIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finish_Goods_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finish Goods Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forecast_Fab_Cycle_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forecast Fab Cycle Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GFV_Fab9_10_Reports__c</fullName>
        <defaultValue>true</defaultValue>
        <label>GFV Fab9/10 Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GlobalShuttle_MPW_WIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GlobalShuttle – MPW WIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Shuttle_reservation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global Shuttle reservation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Declaration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IP Declaration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_PLM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IP (PLM)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IP Catalog Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inline_Measurement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inline Measurement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lot_Control_table__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lot Control table</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lot_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lot History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MPW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Devices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2: Tab access for the My Devices tab</description>
        <label>My Devices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Reticles_Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>My Reticles(Read Only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Wafers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2: Tab access for the My Wafers Tab</description>
        <label>My Wafers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NRE_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NRE Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Part_Creation_after_Proto_form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Part Creation (after Proto form)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Time_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Time Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Acknowledgement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Acknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Query__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Used for the Order Query Link visibility control.</description>
        <label>Order Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Orders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCRB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PCRB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PDK_Design_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2: Tab access for the PDK &amp; Design Documents tab</description>
        <label>PDK &amp; Design Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PDKs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDKs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PTRF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PTRF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Packaging_List_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Packaging List Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Procedure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_Reliability_Monitoring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Reliability Monitoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_Request_Form_PRF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Request Form (PRF)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_Technology__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Catalog Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2: Tab access for the Product &amp; Services tab</description>
        <label>Product &amp; Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Wafer_Compliance_Analysis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Wafer Compliance Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production_Query__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Used for the Production Query Link visibility control.</description>
        <label>Production Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Protoype_tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Protoype tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purchase Order Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROM_Blanket__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROM Blanket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RTR_RTP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RTR/RTP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reticle_Obsolescence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>My Reticles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Risk Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scrap_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scrap Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_Alert_by_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ship Alert (by Location )</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipment_Alert_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipment Alert Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipment_Detail_Unsort_and_Sort__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipment Detail (Unsort and Sort)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Query__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Used for the Shipping Query Link visibility control.</description>
        <label>Shipping Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stepper_Tooling_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stepper Tooling Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplier Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tapeout_Fab_9_10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tapeout Fab 9/10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tester_Gauge_R_R__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tester Gauge R&amp;R</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Turnkey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Turnkey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WIP_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WIP Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WLR_Monitoring_report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WLR Monitoring report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wafer_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wafer Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wafer_Scrap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wafer Scrap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wafer_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wafer Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_View__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_IP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3rd Party IP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yield_Sort_ETest_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Yield (Sort/ETest) Reporting</label>
        <type>Checkbox</type>
    </fields>
    <label>Contact Portal Tab Access</label>
</CustomObject>